@@ -11,5 +11,5 @@ MQTT_KEEPALIVE="60" # by default 60 sec
 MQTT_INSECURE="yes" # don't use client TLS cert
 MQTT_USER="mqtt"
 MQTT_PASSWD="12345678" # secret password of user
-MQTT_CLIENT_ID="id"
+MQTT_CLIENT_ID=""
 
