@@ -1,5 +1,6 @@
 2023.04.03:
  + add mosquitto samples and TLS scripts
+ + start test Adafruit MQTT library under ESP32 (debug)
 
 2023.04.02:
  * start work under MQTT client
